<resources>
    <string name="app_name">HealthSyncApp</string>
    <string name="subdomain">http://10.49.176.126:3001</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deseas_marcar_este_ticket_como_no_resuelto">¿Deseas marcar este ticket como &quot;No resuelto&quot;? </string>
    <string name="motivo_de_no_resolucion">MOTIVO DE NO RESOLUCIÓN</string>
    <string name="descripcion_de_la_causa_de_la_no_resolucion">Descripción de la causa de la no resolución</string>
    <string name="adjuntar_evidencia_de_no_resolucion">ADJUNTAR EVIDENCIA DE NO RESOLUCIÓN</string>
    <string name="nombre_del_tecnico">Nombre del técnico</string>
    <string name="nombre_completo">NOMBRE COMPLETO</string>
    <string name="nombre_de_usuario">NOMBRE DE USUARIO</string>
    <string name="usuario_del_tecnico">Usuario del técnico</string>
    <string name="contrasena">CONTRASEÑA</string>
    <string name="ejemplo_de_nombre">Ejemplo de nombre</string>
    <string name="contrasena_del_tecnico">Contraseña del técnico</string>
    <string name="nueva_contrasena">NUEVA CONTRASEÑA</string>
    <string name="estado">Estado</string>
    <string name="proceso_de_revision">PROCESO DE REVISIÓN</string>
    <string name="descripcion_del_proceso_de_revision">Descripción del proceso de revisión</string>
    <string name="descripcion_del_diagnostico_tras_la_revision">Descripción del diagnóstico tras la revisión</string>
    <string name="diagnostico">DIAGNÓSTICO</string>
    <string name="periodo_activo">PERIODO ACTIVO</string>
    <string name="ejemplo_tiempo">Ejemplo tiempo</string>
    <string name="editar">Editar</string>
    <string name="finalizar">Finalizar</string>
    <string name="reclamar">Reclamar</string>
    <string name="administrador">Administrador</string>
    <string name="mis_tickets">Mis tickets</string>
    <string name="todos_los_tickets">Todos los tickets</string>
    <string name="proceso_de_resolucion">PROCESO DE RESOLUCIÓN</string>
    <string name="descripcion_del_proceso_de_solucion">Descripción del proceso de solución</string>
    <string name="componentes_utilizados">COMPONENTES UTILIZADOS</string>
    <string name="adjuntar_evidencia_de_resolucion">ADJUNTAR EVIDENCIA DE RESOLUCIÓN</string>
    <string name="subir_imagen">Subir Imagen</string>
    <string name="componente3">Componente3</string>
    <string name="evidencia_de_resolucion">EVIDENCIA DE RESOLUCIÓN</string>
    <string name="evidencia_de_no_resolucion">EVIDENCIA DE NO RESOLUCIÓN</string>
    <string name="tecnico_a_cargo">TÉCNICO A CARGO</string>
    <string name="deseas_eliminar_este_ticket">¿Deseas eliminar este ticket?</string>
    <string name="fecha">Fecha</string>
    <string name="tipo">Tipo</string>
    <string name="mas_info">Más info</string>
    <string name="tiempo_prom_por_ticket_h">Tiempo prom. por ticket (h)</string>
    <string name="tickets_totales">Tickets totales</string>
    <string name="usuario">Usuario</string>
    <string name="estadisticas">Estadísticas</string>
    <string name="_23">23</string>
    <string name="_65">65</string>
    <string name="tickets_en_progreso">Tickets en progreso</string>
    <string name="_7">7</string>
    <string name="tickets_resueltos">Tickets resueltos</string>
    <string name="tickets_no_empezados">Tickets no empezados</string>
    <string name="_38">38</string>
    <string name="tickets_no_resueltos">Tickets no resueltos</string>
    <string name="tickets_eliminados">Tickets eliminados</string>
    <string name="ver_mas">Ver Más</string>
    <string name="administrar_cuentas">Administrar cuentas</string>
    <string name="historial_tickets">Historial tickets</string>
    <string name="creacion_de_perfil_de_tecnico">Creación de perfil de técnico</string>
    <string name="regresar">Regresar</string>
    <string name="historico_de_tickets">Histórico de tickets</string>
    <string name="inicio_de_sesion">Inicio de sesión</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="contrasena_lower_case">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="falla_de_red">Falla de red</string>
    <string name="seleccionar_imagen">Seleccionar Imagen</string>
    <string name="no_resuelto">No Resuelto</string>
    <string name="resolver">Resolver</string>
    <string name="si">SÍ</string>
    <string name="no">NO</string>
    <string name="deseas_reclamar_este_ticket">¿Deseas reclamar este ticket?</string>
</resources>