<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:background="@drawable/linear_layout_borde"
        android:elevation="10dp"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:minWidth="50dp"
            android:minHeight="50dp"
            app:srcCompat="@drawable/perfil" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNombreSubt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/nombre_completo"
                android:textColor="#000000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:fontFamily="@font/inter"
                android:hint="@string/nombre_del_tecnico"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxHeight="35dp"
                android:minHeight="48dp"
                android:padding="5dp"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtUsuarioSubtAdmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/nombre_de_usuario"
                android:textColor="#000000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:fontFamily="@font/inter"
                android:hint="@string/usuario_del_tecnico"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="5dp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtPwdTecnico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/contrasena"
                android:textColor="#000000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edtPwdTecnico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="25dp"
                android:autofillHints="Password"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/contrasena_del_tecnico"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="5dp"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>