<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ResolutionEvidence">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/linear_layout_borde"
        android:elevation="10dp"
        android:orientation="vertical"
        android:padding="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtProcesoRevisionSubtitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/proceso_de_revision"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textProcesoRevisionCliente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:width="270dp"
                    android:height="40dp"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="start|center_vertical"
                    android:maxWidth="270dp"
                    android:maxHeight="40dp"
                    android:minWidth="270dp"
                    android:minHeight="40dp"
                    android:text="@string/descripcion_del_proceso_de_revision"
                    android:textColor="#000000"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtDiagnosticoSubtitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/diagnostico"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtDiagnosticoCliente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:width="270dp"
                    android:height="40dp"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="start|center_vertical"
                    android:maxWidth="270dp"
                    android:maxHeight="40dp"
                    android:minWidth="270dp"
                    android:minHeight="40dp"
                    android:text="@string/descripcion_del_diagnostico_tras_la_revision"
                    android:textColor="#000000"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtProcesoResolucionSubtitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/proceso_de_resolucion"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtProcesoResolucionCliente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:width="270dp"
                    android:height="40dp"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="start|center_vertical"
                    android:maxWidth="270dp"
                    android:maxHeight="40dp"
                    android:minWidth="270dp"
                    android:minHeight="40dp"
                    android:text="@string/descripcion_del_proceso_de_solucion"
                    android:textColor="#000000"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtComponentesSubtitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/componentes_utilizados"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtComponentesCliente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:width="270dp"
                    android:height="40dp"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="start|center_vertical"
                    android:maxWidth="270dp"
                    android:maxHeight="40dp"
                    android:minWidth="270dp"
                    android:minHeight="40dp"
                    android:text="@string/componente3"
                    android:textColor="#000000"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtEvidenciaResolucionSubtitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/evidencia_de_resolucion"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/imgEvidencia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    tools:srcCompat="@tools:sample/avatars" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>