<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/linear_layout_borde"
        android:elevation="10dp"
        android:orientation="vertical"
        android:padding="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtMotivoNoRes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/motivo_de_no_resolucion"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtMotivoNoResCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:width="270dp"
                android:height="40dp"
                android:fontFamily="@font/inter_semibold"
                android:gravity="start|center_vertical"
                android:maxWidth="270dp"
                android:maxHeight="40dp"
                android:minWidth="270dp"
                android:minHeight="40dp"
                android:text="@string/descripcion_del_proceso_de_revision"
                android:textColor="#000000"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/txtEvidenciaNoResSubt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/evidencia_de_no_resolucion"
                android:textColor="#000000"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/imgEvidenciaNoRes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                tools:srcCompat="@tools:sample/avatars" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>